--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "noapi",
   "version": "0.0.0",
   "description": "Some shit",
-  "main": "src/datastruct.js",
+  "main": "index.js",
   "license": "MIT",
   "devDependencies": {
     "assert": "^1.4.1",
@@ -11,8 +11,8 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/babel-node --presets=latest ./test.js",
-    "test": "mocha --compilers babel-register --require babel-polyfill"
+    "start": "npx babel-node --presets=latest ./test.js",
+    "test": "npx mocha --compilers babel-register --require babel-polyfill"
   },
   "babel": {
     "presets": [
@@ -25,6 +25,7 @@
     "babel-preset-latest": "^6.24.1",
     "immutable": "^3.8.2",
     "immutablediff": "^0.4.4",
+    "immutablepatch": "^0.4.2",
     "uuid": "^3.2.1"
   }
 }
