--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "assert": "^1.4.1",
     "babel-cli": "^6.26.0",
     "babel-preset-es2017": "^6.24.1",
+    "chai": "^4.1.2",
     "mocha": "^5.2.0"
   },
   "scripts": {
