--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     ]
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "immutable": "^3.8.2",
     "immutablediff": "^0.4.4",
     "immutablepatch": "^0.4.2",
+    "react": "^16.4.2",
     "uuid": "^3.2.1"
   }
 }
